# aws-iam-tester

./: .gitignore  LICENSE  README.md  aws-iam-tester.py  config.yml  pypi-update.sh  pyproject.toml  requirements.in  requirements.txt  results  setup.py  tox.ini
.github/workflows/: codeql-analysis.yml
aws_iam_tester/: __init__.py  cli.py  testing.py
aws_iam_tester/lib/: __init__.py  aws_iam_tester.py
tests/: config.yml  config_cc.yml  config_sm.yml  config_with_global_limit_to.yml  test_cli.py  test_sample.py
