[tool.poetry]
name = "aws-iam-tester"
version = "0.3.8"
description = "AWS IAM tester - simple command-line tool to check permissions handed out to IAM users and roles."
authors = ["Gerco Grandia <gerco.grandia@4synergy.nl>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gercograndia/aws-iam-tester"
repository = "https://github.com/gercograndia/aws-iam-tester"
documentation = "https://github.com/gercograndia/aws-iam-tester/blob/master/README.md"
keywords = ["AWS",
            "IAM",
            "Policy",
            "Tester",
            "Evaluation",
            "Simulator"]

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.12.22"
pyyaml = "^5.3"
click = "^7.1.1"
termcolor = "^1.1.0"
outdated = "^0.2.1"
tabulate = "^0.8.7"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pyassert = "^0.4.2"
pylint = "^2.5.2"
rope = "^0.18.0"

[tool.poetry.scripts]
aws-iam-tester = "aws_iam_tester.cli:cli"

[tool.poetry.urls]
issues = "https://github.com/gercograndia/aws-iam-tester/issues"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"