[tool.poetry]
name = "aws-iam-tester"
version = "1.0.3"
description = "AWS IAM tester - simple command-line tool to check permissions handed out to IAM users and roles."
authors = ["Gerco Grandia <gerco.grandia@4synergy.nl>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gercograndia/aws-iam-tester"
repository = "https://github.com/gercograndia/aws-iam-tester"
documentation = "https://github.com/gercograndia/aws-iam-tester/blob/master/README.md"
keywords = ["AWS",
            "IAM",
            "Policy",
            "Tester",
            "Evaluation",
            "Simulator"]

[tool.poetry.dependencies]
python = "^3.7.2"
boto3 = "^1.26.26"
pyyaml = "^6.0"
click = "^8.1.3"
termcolor = "^2.1.0"
outdated = "^0.2.2"
tabulate = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
pyassert = "^0.4.2"
pylint = "^2.15.8"
rope = "^1.5.1"
tox = "^4.0.3"
mypy = "^0.990"

[tool.poetry.scripts]
aws-iam-tester = "aws_iam_tester.cli:cli"

[tool.poetry.urls]
issues = "https://github.com/gercograndia/aws-iam-tester/issues"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"