[project]
name = "aws-iam-tester"
version = "1.1.0"
description = "AWS IAM tester - simple command-line tool to check permissions handed out to IAM users and roles."
license = { text = "MIT" }
authors = [
    { name = "Gerco Grandia", email = "gerco.grandia@4synergy.nl" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.38.0,<2.0.0",
    "pyyaml>=6.0.2,<7.0.0",
    "click>=8.1.8,<9.0.0",
    "termcolor>=2.5.0,<3.0.0",
    "tabulate>=0.9.0,<0.10.0",
    "six>=1.17.0,<2.0.0",
]
keywords = [
    "AWS",
    "IAM",
    "Policy",
    "Tester",
    "Evaluation",
    "Simulator",
]

[project.urls]
Homepage = "https://github.com/gercograndia/aws-iam-tester"
Repository = "https://github.com/gercograndia/aws-iam-tester"
Documentation = "https://github.com/gercograndia/aws-iam-tester/blob/master/README.md"
Issues = "https://github.com/gercograndia/aws-iam-tester/issues"

[dependency-groups]
dev = [
    "pytest>=8.3.5,<9.0.0",
    "pyassert>=0.4.2,<0.5.0",
    "pylint>=3.3.6,<4.0.0",
    "rope>=1.13.0,<2.0.0",
    "mypy>=1.15.0,<2.0.0",
]

[project.scripts]
aws-iam-tester = "aws_iam_tester.cli:cli"

[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
default-groups = ["dev"]
